<resources>
    <string name="app_name">ContactsApp</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="call_api">call Api</string>
    <string name="delete_all">delete all</string>
    <string name="retrieve_from_room">retrieve from room</string>
</resources>